test template service